--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ical.js": "^1.4.0",
     "iframe-resizer": "^4.3.2",
     "js-base64": "^3.6.1",
+    "jstz": "^2.1.1",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
     "nextcloud_issuetemplate_builder": "^0.1.0",
