--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@ckeditor/ckeditor5-vue2": "^1.0.5",
     "@nextcloud/auth": "^1.3.0",
     "@nextcloud/axios": "^1.6.0",
+    "@nextcloud/calendar-js": "^1.1.0",
     "@nextcloud/dialogs": "^3.1.2",
     "@nextcloud/files": "^2.0.0",
     "@nextcloud/initial-state": "^1.2.0",
@@ -43,7 +44,6 @@
     "@nextcloud/vue-dashboard": "^2",
     "@riophae/vue-treeselect": "^0.4.0",
     "@vue/babel-preset-app": "^4.5.13",
-    "calendar-js": "github:nextcloud/calendar-js",
     "color-convert": "^2.0.1",
     "core-js": "^3.15.2",
     "debounce-promise": "^3.1.2",
